--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Software Developers Spatial Concentration in California </title>
+  <title>Wake County Public Schools </title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" />
   <style>
     body {
