--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
       width: 100%;
       top: 0;
       bottom: 0;
+      margin: 0;
+      padding: 0;
+      background: rgba(0,0,0,.75);
     }
   </style>
 </head>
@@ -27,28 +30,41 @@
 
   <div id="map"></div>
 
-  <script src="https://d3js.org/d3-fetch.v1.min.js"></script>
   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js"
+          integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+          crossorigin="anonymous"></script>
+ 
   <script>
     // map options
     var options = {
       center: [37.265, -94.04],
-      zoom: 4
-    }
+      zoom: 10,
+      minZoom: 10,
+      maxZoom:16,
+      maxBounds: [
+        [35.9032, -78.7661],
+        [35.7032, -78.5661]
+      ]
+    };
     // instantiate Leaflet map
     var map = L.map('map', options);
 
     // add CARTO voyager tiles with no labels
-    L.tileLayer('https://cartodb-basemaps-{s}.global.ssl.fastly.net/rastertiles/voyager_nolabels/{z}/{x}/{y}.png', {
-      maxZoom: 18,
-      attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>, &copy;<a href="https://carto.com/attribution">CARTO</a>'
-    }).addTo(map);
-
-    // load us-counties.json using d3.json() method
-    d3.json('project-files/us-counties.json').then(function(data){
-        L.geoJson(data).addTo(map)
+     L.tileLayer('https://cartodb-basemaps-{s}.global.ssl.fastly.net/rastertiles/voyager_nolabels/{z}/{x}/{y}.png', {
+       maxZoom: 18,
+       attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>, &copy;<a href="https://carto.com/attribution">CARTO</a>'
+     }).addTo(map);
+    
+    // load json files using jquery
+    $.when(
+        $.getJSON('data/school-districts-filtered.json'),
+        $.getJSON('data/schools-filtered.json')
+    ).done(function(districtsData, schoolsData) {
+        L.geoJson(districtsData).addTo(map);
+        L.geoJson(schoolsData).addTo(map);
     });
-
+   
   </script>
 </body>
 
