--- a/index.html
+++ b/index.html
@@ -23,12 +23,48 @@
       padding: 0;
       background: rgba(0,0,0,.75);
     }
+
+    #ui {
+      position: absolute;
+      z-index: 1000;
+      bottom: 18px;
+      right: 18px;
+      padding: 6px 12px;
+      background: rgba(256,256,256,.75);
+    }
+
+    #ui ul {
+      list-style-type: none;
+      padding: 0;
+    }
+
+    #ui li{
+      margin-bottom: 6px;
+    }
+
+    #ui a {
+      text-decoration: none;
+    }
+
+    #ui a:hover {
+      font-weight: bold;
+    }
+
+    .hightlight {
+      font-weight: bold;
+    }
+
   </style>
 </head>
 
 <body>
 
   <div id="map"></div>
+  <div id="ui">
+      <h3>Wake Public Schools</h3>
+      <h4>(Number of public schools)</h4>
+      <ul id="legend-list"></ul>  
+  </div>
 
   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"
@@ -66,6 +102,12 @@
         var districts = districtsData[0],
             colors = colorsData[0],
             schools = schoolsData[0];
+
+        var legendList = $('#legend-list');
+
+          for(var i = 1; i <= districts.features.length; i++) {
+              legendList.append('<li class="legend-item" id="district-' + i + '"><a style="color:' + colors.Geyser[7][i -1] + '" href="#">District ' + i + ' (<span></span>)</a></li>');
+}
 
         var districtsLayerGroup = L.geoJson(districts, {
           style: function(feature) {
