--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
     <title>Wake County Public Schools </title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.3.0/MarkerCluster.Default.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.3.0/MarkerCluster.Default.css"
+    />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.3.0/MarkerCluster.css" />
     <link href='https://fonts.googleapis.com/css?family=Antic' rel='stylesheet'>
     <style>
@@ -29,11 +30,33 @@
             background: rgba(0, 0, 0, .75);
         }
 
+        h1 {
+            position: absolute;
+            z-index: 1000;
+            left: 90px;
+            top: 55px;
+            font-family: 'Antic';
+            font-size: 1.8em;
+            font-weight: 200;
+            color: darkslategrey;
+        }
+
+        h2 {
+            position: absolute;
+            z-index: 1000;
+            left: 62px;
+            top: 205px;
+            font-family: 'Antic';
+            font-size: 1.1em;
+            font-weight: 200;
+            color: darkslategrey;
+        }
+
         #ui {
             position: absolute;
             z-index: 1000;
-            bottom: 18px;
-            left: 30px;
+            bottom: 20px;
+            left: 50px;
             padding: 6px 12px;
             background: rgba(260, 260, 260, .25);
         }
@@ -64,15 +87,18 @@
 
 <body>
 
+    <h1>Wake Public Schools</h1>
+    <h2>Schools by District:</h2>
+
     <div id="map"></div>
+
     <div id="ui">
-        <h3>Wake Public Schools</h3>
-        <h4>School Districts:</h4>
         <ul id="legend-list"></ul>
     </div>
 
     <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+        crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.3.0/leaflet.markercluster.js"></script>
 
     <script>
@@ -83,7 +109,7 @@
             minZoom: 10,
             maxZoom: 16,
             maxBounds: [
-                [35.9032, -78.7661],
+                [35.9032, -78.8661],
                 [35.7032, -78.5661]
             ]
         };
@@ -91,7 +117,6 @@
         var map = L.map('map', options);
 
         // add CARTO tiles with no labels
-
         L.tileLayer('https://cartodb-basemaps-{s}.global.ssl.fastly.net/light_nolabels/{z}/{x}/{y}.png', {
             attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a> &copy; <a href="http://cartodb.com/attributions">CartoDB</a>',
             subdomains: 'abcd',
@@ -103,22 +128,23 @@
             $.getJSON('data/school-districts-filtered.json'),
             $.getJSON('data/antiquecolors.json'),
             $.getJSON('data/schools-filtered.json')
-        ).done(function(districtsData, colorsData, schoolsData) {
+        ).done(function (districtsData, colorsData, schoolsData) {
 
             var districts = districtsData[0],
                 colors = colorsData[0],
                 schools = schoolsData[0];
-
-            console.log(schools);
-
+            
+            // store a reference to the HTML list
             var legendList = $('#legend-list');
-
+            // loop through district features and create a new list item for each feature in the legend
             for (var i = 1; i <= districts.features.length; i++) {
+                // each feature, append a new list item, giving each a common class attribute and unique id attribute
                 legendList.append('<li class="legend-item" id="district-' + i + '"><a style="color:' + colors.Antique[11][i - 1] + '" href="#">District ' + i + ' (<span></span>)</a></li>');
             }
-
+            // create a layerGroup with the geojson data
             var districtsLayerGroup = L.geoJson(districts, {
-                style: function(feature) {
+                style: function (feature) {
+                    // colors object to style each polygon
                     return {
                         color: colors.Antique[11][feature.properties.OBJECTID - 1],
                         fillOpacity: 0.4,
@@ -126,72 +152,59 @@
                     }
                 },
                 onEachFeature(feature, layer) {
-                    console.log(layer.feature.properties.DISTRICT);
-                    $('district-' + feature.properties.OBJECTID + ' span').append(feature.properties.DISTRICT);
-
-                    layer.on('mouseover', function() {
-
+                    // select each legend list item span and append the total count of signals
+                    $('district-' + feature.properties.OBJECTID + ' span').append(feature.properties.COUNT);
+                    layer.on('mouseover', function () {
                         this.setStyle({
                             fillOpacity: .6
-                        });
-
+                        })
+                        // select the corresponding list item and add the highlight class
                         $('#district-' + feature.properties.OBJECTID).addClass('highlight');
                     })
-
-                    layer.on('mouseout', function() {
-
+                    layer.on('mouseout', function () {
                         this.setStyle({
                             color: colors.Antique['11'][feature.properties.OBJECTID - 1],
                             fillOpacity: .4
                         });
-
+                        // remove class
                         $('#district-' + feature.properties.OBJECTID).removeClass('highlight');
                     })
-                }
+                },
             }).addTo(map);
 
             // create new markerClusterGroup
             var markers = L.markerClusterGroup();
-
             // loop through all our signals features
-            schools.features.forEach(function(feature) {
+            schools.features.forEach(function (feature) {
                 // create a new Leaflet marker for each
                 var coords = feature.geometry.coordinates,
                     marker = L.marker([coords[1], coords[0]]);
                 // bind a tooltip to the marker
-                marker.bindTooltip("School Name: " + feature.properties.NAMELONG + "<br>" +
+                marker.bindTooltip("School Name: "  + feature.properties.NAMELONG + "<br>" +
                     "District: " + feature.properties.DISTRICT + "<br>" +
                     "Grade Level: " + feature.properties.GLEVEL + "<br>" +
                     "Magnet School: " + feature.properties.IS_MAGNET + "<br>" +
                     "Title 1 School: " + feature.properties.IS_TITLE1 + "<br>" +
                     "District Admin: " + feature.properties.NAME + "<br>"
-                    );
+                );
                 // add the marker to the markerClusterGroup
                 markers.addLayer(marker);
-
             });
             // add the markerClusterGroup to the map
             map.addLayer(markers);
 
-            $('.legend-item').on('mouseover', function() {
-
+            $('.legend-item').on('mouseover', function () {
                 var num = this.id.replace('district-', '');
-
                 highlightDistrict(num);
             });
 
             function highlightDistrict(districtNum) {
-
-                districtsLayerGroup.eachLayer(function(layer) {
-
+                districtsLayerGroup.eachLayer(function (layer) {
                     if (layer.feature.properties.OBJECTID === districtNum) {
-
                         layer.setStyle({
                             fillOpacity: .6
                         }).bringToFront();
-
                     } else {
-
                         layer.setStyle({
                             fillOpacity: .4
                         });
@@ -199,6 +212,8 @@
                 });
             }
         });
+
+
     </script>
 </body>
 
