--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
             padding: 0;
             color: darkslategrey;
         }
-
         #map {
             position: absolute;
             width: 100%;
@@ -29,29 +28,16 @@
             padding: 0;
             background: rgba(0, 0, 0, .75);
         }
-
         h1 {
             position: absolute;
             z-index: 1000;
             left: 90px;
-            top: 55px;
+            top: 65px;
             font-family: 'Antic';
             font-size: 1.8em;
             font-weight: 200;
             color: darkslategrey;
         }
-
-        h2 {
-            position: absolute;
-            z-index: 1000;
-            left: 62px;
-            top: 205px;
-            font-family: 'Antic';
-            font-size: 1.1em;
-            font-weight: 200;
-            color: darkslategrey;
-        }
-
         #ui {
             position: absolute;
             z-index: 1000;
@@ -60,27 +46,25 @@
             padding: 6px 12px;
             background: rgba(260, 260, 260, .25);
         }
-
         #ui ul {
             list-style-type: none;
             padding: 0;
             font-size: 18px;
         }
-
         #ui li {
             margin-bottom: 6px;
         }
-
         #ui a {
             text-decoration: none;
         }
-
         #ui a:hover {
             font-weight: bold;
         }
-
         .hightlight {
             font-weight: bold;
+        }
+        h4 {
+            line-height: 0.3em;
         }
     </style>
 </head>
@@ -88,12 +72,12 @@
 <body>
 
     <h1>Wake Public Schools</h1>
-    <h2>Schools by District:</h2>
 
     <div id="map"></div>
-
     <div id="ui">
+        <h4>Schools by District:</h4>
         <ul id="legend-list"></ul>
+        
     </div>
 
     <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
@@ -147,8 +131,8 @@
                     // colors object to style each polygon
                     return {
                         color: colors.Antique[11][feature.properties.OBJECTID - 1],
-                        fillOpacity: 0.4,
-                        weight: 0.7
+                        fillOpacity: .4,
+                        weight: .7
                     }
                 },
                 onEachFeature(feature, layer) {
@@ -156,7 +140,7 @@
                     $('district-' + feature.properties.OBJECTID + ' span').append(feature.properties.COUNT);
                     layer.on('mouseover', function () {
                         this.setStyle({
-                            fillOpacity: .6
+                            fillOpacity: .7
                         })
                         // select the corresponding list item and add the highlight class
                         $('#district-' + feature.properties.OBJECTID).addClass('highlight');
@@ -180,7 +164,7 @@
                 var coords = feature.geometry.coordinates,
                     marker = L.marker([coords[1], coords[0]]);
                 // bind a tooltip to the marker
-                marker.bindTooltip("School Name: "  + feature.properties.NAMELONG + "<br>" +
+                marker.bindTooltip("<b>School Name: <b/>"  + feature.properties.NAMELONG + "<br>" +
                     "District: " + feature.properties.DISTRICT + "<br>" +
                     "Grade Level: " + feature.properties.GLEVEL + "<br>" +
                     "Magnet School: " + feature.properties.IS_MAGNET + "<br>" +
