--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             padding: 0;
             color: darkslategrey;
         }
+
         #map {
             position: absolute;
             width: 100%;
@@ -28,43 +29,66 @@
             padding: 0;
             background: rgba(0, 0, 0, .75);
         }
+
         h1 {
             position: absolute;
             z-index: 1000;
             left: 90px;
-            top: 65px;
+            top: 58px;
             font-family: 'Antic';
-            font-size: 1.8em;
+            font-size: 2.2em;
             font-weight: 200;
             color: darkslategrey;
+            background: rgba(260, 260, 260, .25);
         }
+
         #ui {
             position: absolute;
             z-index: 1000;
             bottom: 20px;
-            left: 50px;
+            left: 80px;
             padding: 6px 12px;
-            background: rgba(260, 260, 260, .25); 
+            background: rgba(260, 260, 260, .25);
         }
+
         #ui ul {
             list-style-type: none;
             padding: 0;
             font-size: 18px;
         }
+
         #ui li {
             margin-bottom: 6px;
         }
+
         #ui a {
             text-decoration: none;
         }
+
         #ui a:hover {
             font-weight: bold;
         }
-        .hightlight {
+
+        .highlight {
             font-weight: bold;
+            text-decoration: underline overline;
+
         }
+
         h4 {
             line-height: 0.3em;
+        }
+
+        .tooltip {
+            z-index: 1000;
+            color: darkslategrey;
+            font-size: 1.6em;
+            font-family: 'Antic';
+            font-weight: bold;
+            padding: 6px 12px;
+            border: 0;
+            fill-opacity: 0;
+            background: rgba(260, 260, 260, .35);
         }
     </style>
 </head>
@@ -77,7 +101,6 @@
     <div id="ui">
         <h4>Schools by District:</h4>
         <ul id="legend-list"></ul>
-        
     </div>
 
     <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
@@ -93,7 +116,7 @@
             minZoom: 10,
             maxZoom: 16,
             maxBounds: [
-                [35.9032, -78.8661],
+                [35.9032, -79.0661],
                 [35.7032, -78.5661]
             ]
         };
@@ -105,6 +128,15 @@
             attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a> &copy; <a href="http://cartodb.com/attributions">CartoDB</a>',
             subdomains: 'abcd',
             maxZoom: 19
+        }).addTo(map);
+
+        //Basemap Labels
+        map.createPane('labels');
+        map.getPane('labels').style.zIndex = 1000;
+        map.getPane('labels').style.pointerEvents = 'none';
+        L.tileLayer('https://cartodb-basemaps-{s}.global.ssl.fastly.net/rastertiles/light_only_labels/{z}/{x}/{y}.png', {
+            attribution: '©OpenStreetMap, ©CartoDB',
+            pane: 'labels',
         }).addTo(map);
 
         // load json files using jquery
@@ -121,39 +153,47 @@
             // store a reference to the HTML list
             var legendList = $('#legend-list');
             // loop through district features and create a new list item for each feature in the legend
-            for (var i = 1; i <= districts.features.length; i++) {                
+            for (var i = 1; i <= districts.features.length; i++) {
                 // each feature, append a new list item, giving each a common class attribute and unique id attribute
                 legendList.append('<li class="legend-item" id="district-' + i + '"><a style="color:' + colors.Antique[11][i - 1] + '" href="#">District ' + i + ' (<span></span>)</a></li>');
             }
             // create a layerGroup with the geojson data
-            var districtsLayerGroup = L.geoJson(districts, { 
+            var districtsLayerGroup = L.geoJson(districts, {
                 style: function (feature) {
                     // colors object to style each polygon
                     return {
-                        color: colors.Antique[11][feature.properties.OBJECTID - 1],
+                        color: colors.Antique[11][feature.properties.DISTRICT - 1],
                         fillOpacity: .4,
                         weight: .7
                     }
                 },
                 onEachFeature(feature, layer) {
-                    console.log(feature);
                     // select each legend list item span and append the total count of schools
-                    var test = $('district-' + feature.properties.OBJECTID + ' span').append(feature.properties.COUNT);
-                    console.log(test);
+                    $('#district-' + feature.properties.DISTRICT + ' span').append(feature.properties.COUNT);
+                    // when mousing over a polygon layer
                     layer.on('mouseover', function () {
+                        // shorthand variable 
+                        var tooltip = feature.properties.NAME;
+                        // bind tooltip to layer
+                        layer.bindTooltip(tooltip, {
+                            sticky: true,
+                            className: 'tooltip'
+                        }).addTo(map).bringToFront();
+                        // provide visual affordance
                         this.setStyle({
-                            fillOpacity: .7
+                            fillOpacity: .8
                         })
                         // select the corresponding list item and add the highlight class
-                        $('#district-' + feature.properties.OBJECTID).addClass('highlight');
+                        $('#district-' + feature.properties.DISTRICT).addClass('highlight');
                     })
                     layer.on('mouseout', function () {
+                        // reset mouse event
                         this.setStyle({
-                            color: colors.Antique['11'][feature.properties.OBJECTID - 1],
+                            color: colors.Antique['11'][feature.properties.DISTRICT - 1],
                             fillOpacity: .4
-                        });
+                        })
                         // remove class
-                        $('#district-' + feature.properties.OBJECTID).removeClass('highlight');
+                        $('#district-' + feature.properties.DISTRICT).removeClass('highlight');
                     })
                 },
             }).addTo(map);
@@ -162,11 +202,17 @@
             var markers = L.markerClusterGroup();
             // loop through all our signals features
             schools.features.forEach(function (feature) {
+
+                var icon = L.icon({
+                    iconUrl: 'images/school.png'
+                });
                 // create a new Leaflet marker for each
                 var coords = feature.geometry.coordinates,
-                    marker = L.marker([coords[1], coords[0]]);
+                    marker = L.marker([coords[1], coords[0]],
+                        { opacity: 0.7, icon: icon });
+
                 // bind a tooltip to the marker
-                marker.bindTooltip("<b>School Name: <b/>"  + feature.properties.NAMELONG + "<br>" +
+                marker.bindTooltip("<b>School Name: <b/>" + feature.properties.NAMELONG + "<br>" +
                     "District: " + feature.properties.DISTRICT + "<br>" +
                     "Grade Level: " + feature.properties.GLEVEL + "<br>" +
                     "Magnet School: " + feature.properties.IS_MAGNET + "<br>" +
@@ -174,21 +220,27 @@
                     "District Admin: " + feature.properties.NAME + "<br>"
                 );
                 // add the marker to the markerClusterGroup
-                markers.addLayer(marker);
+                markers.addLayer(marker).bringToFront();
             });
             // add the markerClusterGroup to the map
             map.addLayer(markers);
 
+            // select all the list items and on mouseover
             $('.legend-item').on('mouseover', function () {
+                // extract the specific number from the specific item being mouse over
                 var num = this.id.replace('district-', '');
+                // send this number as an argument to the highlightDistrict function
                 highlightDistrict(num);
             });
 
             function highlightDistrict(districtNum) {
+                // loop through the districts polygons
                 districtsLayerGroup.eachLayer(function (layer) {
-                    if (layer.feature.properties.OBJECTID === districtNum) {
+
+                    // if the district id matches the one we are mousing over
+                    if (layer.feature.properties.DISTRICT === districtNum) {
                         layer.setStyle({
-                            fillOpacity: .6
+                            fillOpacity: .8
                         }).bringToFront();
                     } else {
                         layer.setStyle({
@@ -198,7 +250,6 @@
                 });
             }
         });
-
 
     </script>
 </body>
