icon label changed

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             schools.features.forEach(function (feature) {
 
                 var icon = L.icon({
-                    iconUrl: 'images/school.png'
+                    iconUrl: 'images/schools.png'
                 });
                 // create a new Leaflet marker for each
                 var coords = feature.geometry.coordinates,
