--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
     <title>Wake County Public Schools </title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.3.0/MarkerCluster.Default.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.3.0/MarkerCluster.Default.css"
+    />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.3.0/MarkerCluster.css" />
     <link href='https://fonts.googleapis.com/css?family=Antic' rel='stylesheet'>
     <style>
@@ -71,7 +72,6 @@
         .highlight {
             font-weight: bold;
             text-decoration: underline overline;
-
         }
 
         h4 {
@@ -89,6 +89,22 @@
             fill-opacity: 0;
             background: rgba(260, 260, 260, .35);
         }
+
+        .footer {
+            z-index: 1000;
+            position: absolute;
+            font-size: 0.6em;
+            font-family: 'Antic';
+            font-weight: bold;
+            color: darkslategrey;
+            text-align: left;
+            padding: 6px 12px;
+            right: 0;
+            bottom: 0;
+            width: 340px;
+            height: 70px;
+            background-color: rgba(260, 260, 260, .25);
+        }
     </style>
 </head>
 
@@ -101,9 +117,15 @@
         <h4>Schools by District:</h4>
         <ul id="legend-list"></ul>
     </div>
+    <div class="footer">
+        <p class="ex2">Data Sources:
+            <a class='link' href='https://data-ral.opendata.arcgis.com'>Raleigh Open Data</a>,
+            <br>Map Authored by: Maria Renee Horn & Joe Blankenship</p>
+    </div>
 
     <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+        crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.3.0/leaflet.markercluster.js"></script>
 
     <script>
@@ -142,7 +164,7 @@
             $.getJSON('data/school-districts-counts.json'),
             $.getJSON('data/antiquecolors.json'),
             $.getJSON('data/schools-filtered.json')
-        ).done(function(districtsData, colorsData, schoolsData) {
+        ).done(function (districtsData, colorsData, schoolsData) {
 
             var districts = districtsData[0],
                 colors = colorsData[0],
@@ -157,7 +179,7 @@
             }
             // create a layerGroup with the geojson data
             var districtsLayerGroup = L.geoJson(districts, {
-                style: function(feature) {
+                style: function (feature) {
                     // colors object to style each polygon
                     return {
                         color: colors.Antique[11][feature.properties.DISTRICT - 1],
@@ -169,7 +191,7 @@
                     // select each legend list item span and append the total count of schools
                     $('#district-' + feature.properties.DISTRICT + ' span').append(feature.properties.COUNT);
                     // when mousing over a polygon layer
-                    layer.on('mouseover', function() {
+                    layer.on('mouseover', function () {
                         // provide visual affordance
                         this.setStyle({
                             fillOpacity: .8
@@ -185,7 +207,7 @@
                         $('#district-' + feature.properties.DISTRICT).addClass('highlight');
                     });
 
-                    layer.on('mouseout', function() {
+                    layer.on('mouseout', function () {
                         // reset mouse event
                         this.setStyle({
                             color: colors.Antique['11'][feature.properties.DISTRICT - 1],
@@ -200,8 +222,8 @@
             // create new markerClusterGroup
             var markers = L.markerClusterGroup();
             // loop through all our signals features
-            schools.features.forEach(function(feature) {
-
+            schools.features.forEach(function (feature) {
+                // create customize marker icon
                 var icon = L.icon({
                     iconUrl: 'images/schools.png'
                 });
@@ -228,14 +250,14 @@
             map.addLayer(markers);
 
             // select all the list items and on mouseover
-            $('.legend-item').on('mouseover', function() {
+            $('.legend-item').on('mouseover', function () {
                 // extract the specific number from the specific item being mouse over
                 var num = this.id.replace('district-', '');
                 // send this number as an argument to the highlightDistrict function
                 highlightDistrict(num);
             });
 
-            $('.legend-item').on('click', function() {
+            $('.legend-item').on('click', function () {
                 // extract the specific number from the specific item
                 // being clicked
                 var num = this.id.replace('district-', '');
@@ -245,8 +267,7 @@
 
             function highlightDistrict(districtNum) {
                 // loop through the districts polygons
-                districtsLayerGroup.eachLayer(function(layer) {
-
+                districtsLayerGroup.eachLayer(function (layer) {
                     // if the district id matches the one we are mousing over
                     if (layer.feature.properties.DISTRICT === districtNum) {
                         layer.setStyle({
@@ -260,9 +281,13 @@
                 });
             };
 
+            // create function to zoom district bounds
             function panToDistrict(districtNum) {
-                districtsLayerGroup.eachLayer(function(layer) {
+                // loop through the districts polygons
+                districtsLayerGroup.eachLayer(function (layer) {
+                    // if district matches with the district number
                     if (layer.feature.properties.DISTRICT === districtNum) {
+                        // zoom to the district bounds
                         map.fitBounds(layer.getBounds());
                     }
                 })
