--- a/index.html
+++ b/index.html
@@ -32,33 +32,43 @@
 
         h1 {
             position: absolute;
-            z-index: 1000;
-            left: 90px;
-            top: 58px;
+            z-index: 650;
+            left: 70px;
+            top: 10px;
+            padding: 8px 15px;
+            margin: 0;
             font-family: 'Antic';
-            font-size: 2.2em;
-            font-weight: 200;
-            color: darkslategrey;
-            background: rgba(260, 260, 260, .25);
+            font-size: 2em;
+            font-weight: 300;
+            background: rgba(235, 235, 235, 0.82);
+            border-radius: 5px;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+        }
+
+        h4 {
+            line-height: 0.3em;
         }
 
         #ui {
             position: absolute;
             z-index: 1000;
             bottom: 20px;
-            left: 80px;
-            padding: 6px 12px;
-            background: rgba(260, 260, 260, .25);
+            left: 30px;
+            padding: 8px 25px 8px 15px;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+            border-radius: 5px;
+            background: rgba(235, 235, 235, 0.82);
         }
 
         #ui ul {
             list-style-type: none;
             padding: 0;
             font-size: 18px;
+            margin: 12px 4px 0;
         }
 
         #ui li {
-            margin-bottom: 6px;
+            height: 22px;
         }
 
         #ui a {
@@ -74,20 +84,15 @@
             text-decoration: underline overline;
         }
 
-        h4 {
-            line-height: 0.3em;
-        }
-
         .tooltip {
-            z-index: 1000;
-            color: darkslategrey;
+            z-index: 650;
             font-size: 1.6em;
             font-family: 'Antic';
             font-weight: bold;
             padding: 6px 12px;
             border: 0;
             fill-opacity: 0;
-            background: rgba(260, 260, 260, .35);
+            background: rgba(235, 235, 235, 0.82);
         }
 
         .footer {
@@ -98,12 +103,12 @@
             font-weight: bold;
             color: darkslategrey;
             text-align: left;
-            padding: 6px 12px;
-            right: 0;
-            bottom: 0;
-            width: 340px;
-            height: 70px;
-            background-color: rgba(260, 260, 260, .25);
+            padding: 8px 8px 8px 8px;
+            right: 10px;
+            bottom: 20px;
+            background-color: rgba(235, 235, 235, 0.82);
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+            border-radius: 5px;
         }
     </style>
 </head>
